# AInsomniaDB

./: CMakeLists.txt  Makefile  README.md  ainsomnia  ainsomnia.go  config.h.in  go.mod  main.cpp
include/: command_handler.h  interface.h  parser.h  utility.h
src/: command_handler.cpp  interface.cpp  parser.cpp
